--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body {
 .container {
     @apply max-w-7xl mx-auto px-4;
 }
+.container-cart {
+    @apply max-w-6xl mx-auto px-4;
+}
 .btn {
     @apply h-[40px] leading-[40px] bg-primary rounded-full text-white inline-block text-sm px-6 transition ease-in-out duration-300;
 }
@@ -29,6 +32,9 @@ body {
     .lg\:btn-lg {
         @apply h-[64px] leading-[64px] px-28 text-lg;
     }
+}
+.cate-p{
+    padding: 10px;
 }
 footer {
     background: linear-gradient(180deg, #1a1e26 0%, #01100b 100%);
